# Reversi__Test

./: AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  ConsolePrinter.h  GameManager.cpp  GameManager.h  GameRules.h  GameState.h  HumanPlayer.h  Player.h  Point.cpp  Point.h  Printer.h  ReversiDefaultRules.cpp  ReversiDefaultRules.h  makefile
gtest_src/codegear/: gtest.groupproj
gtest_src/msvc/: gtest-md.sln
include/: AIPlayer.h  Cell.h  GameManager.h  GameRules.h  GameState.h  GenralDef.h  HumanPlayer.h  Player.h  Point.h  Printer.h  ReversiDefaultRules.h
src/: AIPlayer.cpp  Board.cpp  Cell.cpp  ConsolePrinter.cpp  GameManager.cpp  GameState.cpp  HumanPlayer.cpp  Point.cpp  ReversiDefaultRules.cpp  main.cpp
test/: BoardTest.cpp  GameStateTest.cpp  HumanPlayerTest.cpp  PointTest.cpp  ReversiLogicTest.cpp  gtest_main.cpp
